src/test/ui/rfc-2632-const-trait-impl/without-tilde.stderr
error: expected identifier, found keyword `const`
  --> $DIR/without-tilde.rs:5:13
   |
LL | struct S<T: const Tr>;
   |             ^^^^^ expected identifier, found keyword

error: expected one of `(`, `+`, `,`, `::`, `<`, `=`, or `>`, found `Tr`
  --> $DIR/without-tilde.rs:5:19
   |
LL | struct S<T: const Tr>;
   |                   ^^ expected one of 7 possible tokens

error: aborting due to 2 previous errors

